--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FirefoxOS - SystemApp - API documentation : <?js= title ?></title>
+    <title>API documentation : <?js= title ?></title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -20,7 +20,7 @@
     <header class="header navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#"><strong>FirefoxOS SystemApp</strong> API documentation</a>
+          <a class="brand" href="#">API documentation</a>
         </div>
       </div>
     </header>
