--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -10,11 +10,9 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
-    <link href="styles/bootstrap.css" rel="stylesheet">
+    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/docs.css" rel="stylesheet">
-    <link href="styles/bootstrap-custom.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   </head>
   <body>
     <header class="header navbar navbar-inverse">
