use bs3 column classes

--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -10,7 +10,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
-    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../jsdoc3-bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/docs.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
@@ -18,18 +18,18 @@
     <header class="header navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">API documentation</a>
+          <a class="navbar-brand" href="#">API documentation</a>
         </div>
       </div>
     </header>
 
     <div class="container-fluid">
       <div class="row-fluid">
-          <div class="span4">
+          <div class="col-md-4">
               <?js= this.nav ?>
           </div>
 
-          <div class="span8">
+          <div class="col-md-8">
               <h1 class="page-header"><?js= title ?></h1>
               <?js= content ?>
           </div>
