--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -15,7 +15,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header navbar navbar-inverse">
+    <header class="header navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">API documentation</a>
@@ -25,11 +25,11 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-          <div class="col-md-4">
+          <div class="col-md-3">
               <?js= this.nav ?>
           </div>
 
-          <div class="col-md-8">
+          <div class="col-md-9">
               <h1 class="page-header"><?js= title ?></h1>
               <?js= content ?>
           </div>
