--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -5,20 +5,20 @@ var self = this;
 <dl class="details">
     <?js
         var properties = data.properties;
-        if (properties && properties.length && properties.forEach) { 
+        if (properties && properties.length && properties.forEach) {
     ?>
-        
+
         <h5 class="subsection-title">Properties:</h5>
-        
+
         <dl><?js= this.partial('properties.tmpl', properties) ?></dl>
-        
+
     <?js } ?>
-        
+
     <?js if (data.version) {?>
     <dt class="tag-version">Version:</dt>
     <dd class="tag-version"><ul class="dummy"><li><?js= version ?></li></ul></dd>
     <?js } ?>
-    
+
     <?js if (data.since) {?>
     <dt class="tag-since">Since:</dt>
     <dd class="tag-since"><ul class="dummy"><li><?js= since ?></dd>
@@ -29,14 +29,14 @@ var self = this;
         <?js= this.linkto(data.inherits, this.htmlsafe(data.inherits)) ?>
     </li></dd>
     <?js } ?>
-    
+
     <?js if (data.deprecated) { ?>
         <?js
             if (data.deprecated === true) { ?><span class="yes-def tag-deprecated"><ul class="dummy inline"><li><span class="important tag-deprecated label label-warning">Deprecated</span> Yes</li></ul></span><?js }
             else { ?><span><ul class="dummy inline"><li><span class="important tag-deprecated label label-warning">Deprecated</span> <?js= data.deprecated ?></li></ul></span><?js }
         ?>
     <?js } ?>
-    
+
     <?js if (data.author && author.length) {?>
     <dt class="tag-author">Author:</dt>
     <dd class="tag-author">
@@ -45,17 +45,17 @@ var self = this;
         <?js }); ?></ul>
     </dd>
     <?js } ?>
-    
+
     <?js if (data.copyright) {?>
     <dt class="tag-copyright">Copyright:</dt>
     <dd class="tag-copyright"><ul class="dummy"><li><?js= copyright ?></li></ul></dd>
     <?js } ?>
-    
+
     <?js if (data.license) {?>
     <dt class="tag-license">License:</dt>
     <dd class="tag-license"><ul class="dummy"><li><?js= license ?></li></ul></dd>
     <?js } ?>
-    
+
     <?js if (data.defaultvalue) {?>
     <dt class="tag-default">Default Value:</dt>
     <dd class="tag-default"><ul class="dummy"><li><?js= data.defaultvalue ?></li></ul></dd>
@@ -67,7 +67,7 @@ var self = this;
         <?js= self.linkto(meta.filename) ?>, line <?js= meta.lineno ?>
     </li></ul></dd>
     <?js } ?>
-    
+
     <?js if (data.tutorials && tutorials.length) {?>
     <dt class="tag-tutorial">Tutorials:</dt>
     <dd class="tag-tutorial">
@@ -76,14 +76,14 @@ var self = this;
         <?js }); ?></ul>
     </dd>
     <?js } ?>
-    
+
     <?js if (data.see && see.length) {?>
-    <ul class="inline"><li><dt class="tag-see">See:</dt></li>
+    <dt class="tag-see">See:</dt>
         <?js see.forEach(function(s) { ?>
-            <li><?js= self.linkto(s, s, 'btn') ?></li>
+            <?js= self.linkto(s, s) ?>
         <?js }); ?>
     <?js } ?>
-    
+
     <?js if (data.todo && todo.length) {?>
     <dt class="tag-todo">To Do:</dt>
     <dd class="tag-todo">
