--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -11,7 +11,7 @@
     <![endif]-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,700,600,400' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
-    <link href="../../jsdoc3-bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/docs.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
