--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -2,7 +2,15 @@
 var data = obj;
 var self = this;
 ?>
-    <h3 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') + name + (kind !== 'event' ? data.signature : '') ?></h3>
+    <h3 class="name" id="<?js= id ?>"><?js=
+      kind === 'class' ? 'Constructor' : (
+        data.attribs + (kind === 'class' ? 'new ' : '') + name + (kind !== 'event' ? data.signature : '')
+      )
+    ?></h3>
+
+    <?js if (kind === 'class') { ?>
+      <h4><?js= data.attribs + 'new ' + name + data.signature ?></h4>
+    <?js } ?>
 
     <?js if (data.summary) { ?>
     <p class="summary"><?js= summary ?></p>
