--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -58,7 +58,7 @@ var self = this;
 
     <?js if (data.defaultvalue) {?>
     <dt class="tag-default">Default Value:</dt>
-    <dd class="tag-default"><ul class="dummy"><li><?js= data.defaultvalue ?></li></ul></dd>
+    <dd class="tag-default"><?js= data.defaultvalue ?></dd>
     <?js } ?>
 
     <?js if (data.meta && self.outputSourceReference) {?>
