--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -35,40 +35,40 @@ var self = this;
     <?js } ?>
 
     <?js if (data['this']) { ?>
-        <h5>This:</h5>
+        <h4>This</h4>
         <ul><li><?js= this.linkto(data['this'], data['this']) ?></li></ul>
     <?js } ?>
 
     <?js if (data.params && params.length) { ?>
-        <h4>Parameters:</h4>
+        <h4>Parameters</h4>
         <?js= this.partial('params.tmpl', params) ?>
     <?js } ?>
 
     <?js= this.partial('details.tmpl', data) ?>
 
     <?js if (data.fires && fires.length) { ?>
-    <h5>Fires:</h5>
+    <h4>Fires</h4>
     <ul><?js fires.forEach(function(f) { ?>
         <li><?js= self.linkto(f) ?></li>
     <?js }); ?></ul>
     <?js } ?>
 
     <?js if (data.listens && listens.length) { ?>
-    <h5>Listens to Events:</h5>
+    <h4>Listens to Events</h4>
     <ul><?js listens.forEach(function(f) { ?>
         <li><?js= self.linkto(f) ?></li>
     <?js }); ?></ul>
     <?js } ?>
 
     <?js if (data.listeners && listeners.length) { ?>
-    <h5>Listeners of This Event:</h5>
+    <h4>Listeners of This Event</h4>
     <ul><?js listeners.forEach(function(f) { ?>
         <li><?js= self.linkto(f) ?></li>
     <?js }); ?></ul>
     <?js } ?>
 
     <?js if (data.exceptions && exceptions.length) { ?>
-    <h5>Throws:</h5>
+    <h4>Throws</h4>
     <?js if (exceptions.length > 1) { ?><ul><?js
         exceptions.forEach(function(r) { ?>
             <li><?js= self.partial('exceptions.tmpl', r) ?></li>
@@ -80,7 +80,7 @@ var self = this;
     } } ?>
 
     <?js if (data.returns && returns.length) { ?>
-    <h4>Returns:</h4>
+    <h4>Returns</h4>
     <?js if (returns.length > 1) { ?><ul><?js
         returns.forEach(function(r) { ?>
             <li><?js= self.partial('returns.tmpl', r) ?></li>
