More member and method style refinements

--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -8,7 +8,7 @@ var self = this;
         if (properties && properties.length && properties.forEach) {
     ?>
 
-        <h5 class="subsection-title">Properties:</h5>
+        <h4 class="subsection-title">Properties</h4>
 
         <dl><?js= this.partial('properties.tmpl', properties) ?></dl>
 
