--- a/tmpl/type.tmpl
+++ b/tmpl/type.tmpl
@@ -2,6 +2,6 @@
 	var data = obj;
     var self = this;
     data.forEach(function(name, i) { ?>
-<h5 class="param-type"><?js= self.linkto(name, self.htmlsafe(name)) ?></h5>
+<?js= self.linkto(name, self.htmlsafe(name)) ?>
 <?js if (i < data.length-1) { ?>|<?js } ?>
 <?js }); ?>
