--- a/tmpl/enum-list.tmpl
+++ b/tmpl/enum-list.tmpl
@@ -6,7 +6,6 @@
     <thead>
         <tr>
             <th>Name</th>
-            <th>Type</th>
             <th class="last">Description</th>
         </tr>
         </thead>
@@ -16,12 +15,11 @@
             var self = this;
             members.forEach(function(member) {
                 if (!member) { return; }
-                if (member.isEnum) return;
+                if (!member.isEnum) return;
         ?>
 
         <tr>
             <td class="name"><a href="#<?js= member.name ?>"><?js= member.name ?></a></td>
-            <td class="name"><?js= member.signature.replace(':','') ?></td>
             <td>
                 <?js if (member.description) { ?>
                     <?js= member.description.replace(/\n\n/g, '</p><p>') ?>
