dont show type on member list

--- a/tmpl/member-list.tmpl
+++ b/tmpl/member-list.tmpl
@@ -6,7 +6,7 @@
     <thead>
         <tr>
             <th>Name</th>
-            <th>Type</th>
+            <!-- <th>Type</th> -->
             <th class="last">Description</th>
         </tr>
         </thead>
@@ -21,7 +21,7 @@
 
         <tr>
             <td class="name"><a href="#<?js= member.name ?>"><?js= member.name ?></a></td>
-            <td class="name"><?js= member.signature.replace(':','') ?></td>
+            <!-- <td class="name"><?js= member.signature.replace(':','') ?></td> -->
             <td>
                 <?js if (member.description) { ?>
                     <?js= member.description.replace(/\n\n/g, '</p><p>') ?>
