--- a/static/styles/docs.css
+++ b/static/styles/docs.css
@@ -1146,5 +1146,5 @@ footer {
 
 /* Override default bootstrap th/td padding */
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
-  padding: 7px 10px;
+  /* padding: 7px 10px; */
 }
