consolidate summary lists

--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -99,7 +99,7 @@
     ?>
         <h3 class="subsection-title">Enums</h3>
         <div class="panel panel-default">
-            <?js= self.partial('enum-list.tmpl', members) ?>
+            <?js= self.partial('method-list.tmpl', members) ?>
         </div>
 
     <?js } ?>
@@ -110,7 +110,7 @@
     ?>
         <h3 class="subsection-title">Instance Members</h3>
         <div class="panel panel-default">
-            <?js= self.partial('member-list.tmpl', members) ?>
+            <?js= self.partial('method-list.tmpl', members) ?>
         </div>
 
     <?js } ?>
