--- a/tmpl/method-list.tmpl
+++ b/tmpl/method-list.tmpl
@@ -26,8 +26,7 @@
 
                 <?js if (method.inherits) { ?>
                   (inherited from
-                    <?js= self.linkto(method.inherits, self.htmlsafe(method.inherits)) ?>
-                  )
+                    <?js= self.linkto(method.inherits, self.htmlsafe(method.inherits)) ?>)
                 <?js } ?>
 
 
