--- a/tmpl/properties.tmpl
+++ b/tmpl/properties.tmpl
@@ -1,6 +1,6 @@
 <?js
     var props = obj;
-    
+
     /* sort subprops under their parent props (like opts.classname) */
     var parentProp = null;
     props.forEach(function(prop, i) {
@@ -15,80 +15,92 @@
             parentProp = prop;
         }
     });
-    
+
     /* determine if we need extra columns, "attributes" and "default" */
     props.hasAttributes = false;
     props.hasDefault = false;
     props.hasName = false;
-    
+    props.hasType = true;
+
     props.forEach(function(prop) {
         if (!prop) { return; }
-        
+
         if (prop.optional || prop.nullable) {
             props.hasAttributes = true;
         }
-        
+
         if (prop.name) {
             props.hasName = true;
         }
-        
+
         if (typeof prop.defaultvalue !== 'undefined') {
             props.hasDefault = true;
         }
     });
+
+    // override if showing enum props
+    if (props.forEnum) {
+      props.hasAttributes = false;
+      props.hasDefault = false;
+      props.hasType = false;
+    }
 ?>
 
 <table class="props table table-bordered table-condensed">
     <thead>
-	<tr>
-		<?js if (props.hasName) {?>
-		<th>Name</th>
-		<?js } ?>
-		
-		<th>Type</th>
-		
-		<?js if (props.hasAttributes) {?>
-		<th>Argument</th>
-		<?js } ?>
-		
-		<?js if (props.hasDefault) {?>
-		<th>Default</th>
-		<?js } ?>
-		
-		<th class="last">Description</th>
-	</tr>
-	</thead>
-	
-	<tbody>
-	<?js
+  <tr>
+    <?js if (props.hasName) {?>
+    <th>Name</th>
+    <?js } ?>
+
+    <?js if (props.hasType) {?>
+    <th>Type</th>
+    <?js } ?>
+
+    <?js if (props.hasAttributes) {?>
+    <th>Argument</th>
+    <?js } ?>
+
+    <?js if (props.hasDefault) {?>
+    <th>Default</th>
+    <?js } ?>
+
+    <th class="last">Description</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <?js
         var self = this;
-	    props.forEach(function(prop) {
-	        if (!prop) { return; }
-	?>
-	
+      props.forEach(function(prop) {
+          if (!prop) { return; }
+  ?>
+
         <tr>
             <?js if (props.hasName) {?>
                 <td class="name"><?js= prop.name ?></td>
             <?js } ?>
-            
-            <td class="type">
-            <?js if (prop.type && prop.type.names) {?>
-                <?js= self.partial('type.tmpl', prop.type.names) ?>
+
+            <?js if (props.hasType) {?>
+              <td class="type">
+              <?js if (prop.type && prop.type.names) {?>
+                  <?js= self.partial('type.tmpl', prop.type.names) ?>
+              <?js } ?>
+              </td>
             <?js } ?>
-            </td>
-            
+
             <?js if (props.hasAttributes) {?>
                 <td class="attributes">
                 <?js if (prop.optional) { ?>
                     <span class="label">optional</span>&nbsp;
                 <?js } ?>
-                    
+
                 <?js if (prop.nullable) { ?>
                     <span class="label">nullable</span>&nbsp;
                 <?js } ?>
                 </td>
             <?js } ?>
-            
+
             <?js if (props.hasDefault) {?>
                 <td class="default">
                 <?js if (typeof prop.defaultvalue !== 'undefined') { ?>
@@ -96,12 +108,12 @@
                 <?js } ?>
                 </td>
             <?js } ?>
-            
+
             <td class="description last"><?js= prop.description ?><?js if (prop.subprops) { ?>
                 <h6>Properties</h6><?js= self.partial('properties.tmpl', prop.subprops) ?>
             <?js } ?></td>
         </tr>
-	
-	<?js }); ?>
-	</tbody>
+
+  <?js }); ?>
+  </tbody>
 </table>
