--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -13,7 +13,7 @@
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link href="styles/bootstrap.min.css" rel="stylesheet">
     <link href="styles/docs.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="header navbar navbar-inverse navbar-fixed-top">
