--- a/tmpl/method-list.tmpl
+++ b/tmpl/method-list.tmpl
@@ -14,11 +14,26 @@
         <?js
             var self = this;
             methods.forEach(function(method) {
-                if (!method) { return; }
+              if (!method) { return; }
+
+              var returns = method.returns &&
+                method.returns[0] &&
+                method.returns[0].type &&
+                method.returns[0].type.names &&
+                method.returns[0].type.names[0];
+
         ?>
 
         <tr>
-            <td class="name"><a href="#<?js= method.name ?>"><?js= method.name ?></a></td>
+            <td class="name">
+              <a href="#<?js= method.name ?>"><?js= method.name ?></a>
+              <?js if (method.readonly) { ?>
+                <i title="readonly" class="fa fa-lock"></i>
+              <?js } ?>
+              <?js if (returns === 'Promise') { ?>
+                <i title="Promise-based async" class="fa fa-random"></i>
+              <?js } ?>
+            </td>
             <td>
                 <?js if (method.description) { ?>
                     <?js= method.description.replace(/<\/p>[\s\S]*/, '') ?>
