--- a/static/styles/docs.css
+++ b/static/styles/docs.css
@@ -1148,3 +1148,12 @@ footer {
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
   /* padding: 7px 10px; */
 }
+
+/* icons on member lists */
+td.name .fa {
+  font-size: 1.2em;
+  position: relative;
+  top: 1px;
+  padding: 0 0 0 3px;
+  opacity: 0.5;
+}
