--- a/static/styles/docs.css
+++ b/static/styles/docs.css
@@ -1048,6 +1048,7 @@ body {
 
 h3 {
   margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 h4 {
@@ -1104,8 +1105,14 @@ dt {
 .label-info {
   background: none;
   color: #555;
-  font-style: italic;
   font-size: 14px;
+  font-weight: 300;
+  display: inline-block;
+  border: solid 1px black;
+  border-radius: 23px;
+  position: relative;
+  top: -2px;
+  margin-left: 9px;
 }
 
 dt .type-signature {
@@ -1158,3 +1165,14 @@ td.name .fa {
   opacity: 0.5;
 }
 
+td.description p {
+  margin: 0;
+}
+
+.subsection-title i.fa {
+  opacity: 0.75;
+}
+
+.nav > li > a {
+  padding: 7px;
+}
