--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -1,29 +1,34 @@
 <?js var data = obj; ?>
-<dt>
-    <h3 class="name" id="<?js= id ?>">
-      <?js= name + (data.signature ? data.signature : '') ?>
-      <?js if(data.isEnum) { ?>
-        <span class="label label-info">enum</span>
-      <?js } else { ?>
-        <?js= data.attribs ?>
-      <?js} ?>
-    </h3>
+<dl class="bs-docs-example bs-members">
+  <dt>
+      <h3 class="name" id="<?js= id ?>">
+        <?js= name + (data.signature ? data.signature : '') ?>
+        <?js if(data.isEnum) { ?>
+          <span class="label label-info">enum</span>
+        <?js } else { ?>
+          <?js= data.attribs ?>
+        <?js} ?>
+        <?js if (data._returns === 'Promise') { ?>
+          <span class="label label-info">async</span>
+        <?js } ?>
+      </h3>
 
-    <?js if (data.summary) { ?>
-    <p class="summary"><?js= summary ?></p>
-    <?js } ?>
-</dt>
-<dd>
-    <?js if (data.description) { ?>
-    <div class="description">
-        <?js= data.description ?>
-    </div>
-    <?js } ?>
+      <?js if (data.summary) { ?>
+      <p class="summary"><?js= summary ?></p>
+      <?js } ?>
+  </dt>
+  <dd>
+      <?js if (data.description) { ?>
+      <div class="description">
+          <?js= data.description ?>
+      </div>
+      <?js } ?>
 
-    <?js= this.partial('details.tmpl', data) ?>
+      <?js= this.partial('details.tmpl', data) ?>
 
-    <?js if (data.examples && examples.length) { ?>
-        <h5>Example<?js= examples.length > 1? 's':'' ?></h5>
-        <?js= this.partial('examples.tmpl', examples) ?>
-    <?js } ?>
-</dd>
+      <?js if (data.examples && examples.length) { ?>
+          <h5>Example<?js= examples.length > 1? 's':'' ?></h5>
+          <?js= this.partial('examples.tmpl', examples) ?>
+      <?js } ?>
+  </dd>
+</dl>
