--- a/tmpl/method-list.tmpl
+++ b/tmpl/method-list.tmpl
@@ -28,7 +28,12 @@
 
         <tr>
             <td class="name">
-              <a class="<?js= method.inherits ? 'inherited' : '' ?>" href="#<?js= method.name ?>"><?js= method.name ?></a>
+              <a class="
+                <?js= method.inherits ? 'inherited' : '' ?>
+                <?js= method.deprecated ? 'deprecated' : '' ?>
+                "
+                href="#<?js= method.name ?>"><?js= method.name ?>
+              </a>
               <?js if (method.readonly) { ?>
                 <i title="readonly" class="fa fa-lock"></i>
               <?js } ?>
