--- a/tmpl/method.tmpl
+++ b/tmpl/method.tmpl
@@ -8,7 +8,10 @@ var self = this;
   <dt>
 <?js } ?>
 
-    <h3 class="subsection-title name" id="<?js= id ?>">
+    <h3 class="
+        subsection-title name
+        <?js= data.deprecated ? 'deprecated' : ''  ?>
+      " id="<?js= id ?>">
 
       <?js if (kind === 'class') { ?>
         <i class="fa fa-cubes"></i> Constructor
@@ -24,6 +27,10 @@ var self = this;
 
       <?js if (data._returns === 'Promise') { ?>
         <span class="label label-info">async</span>
+      <?js } ?>
+
+      <?js if (data.deprecated) { ?>
+        <span class="label label-info">deprecated</span>
       <?js } ?>
 
     </h3>
