--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -103,7 +103,10 @@
         if (members && members.length) {
 
     ?>
-        <h3 class="subsection-title"><i class="fa fa-th-large"></i> Constants</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-th-large"></i>' : '' ?>
+          Constants
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', members) ?>
         </div>
@@ -114,7 +117,10 @@
         var members = self.find({kind: 'member', isEnum: true, memberof: title === 'Global' ? {isUndefined: true} : doc.longname});
         if (members && members.length) {
     ?>
-        <h3 class="subsection-title"><i class="fa fa-sitemap"></i> Enums</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-sitemap"></i>' : '' ?>
+          Enums
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', members) ?>
         </div>
@@ -125,7 +131,10 @@
         var methods = self.find({kind: 'function', scope: 'static', memberof: title === 'Global' ? {isUndefined: true} : doc.longname});
         if (methods && methods.length) {
     ?>
-        <h3 class="subsection-title"><i class="fa fa-gear"></i> Static Methods</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-gear"></i>' : '' ?>
+          Static Methods
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', methods) ?>
         </div>
@@ -136,7 +145,10 @@
         var members = self.find({kind: 'member', scope: 'instance', memberof: title === 'Global' ? {isUndefined: true} : doc.longname});
         if (members && members.length) {
     ?>
-        <h3 class="subsection-title"><i class="fa fa-navicon"></i> Members</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-navicon"></i>' : '' ?>
+          Members
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', members) ?>
         </div>
@@ -147,7 +159,10 @@
         var methods = self.find({kind: 'function', scope: 'instance', memberof: title === 'Global' ? {isUndefined: true} : doc.longname});
         if (methods && methods.length) {
     ?>
-        <h3 class="subsection-title"><i class="fa fa-cube"></i> Methods</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-cube"></i>' : '' ?>
+          Methods
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', methods) ?>
         </div>
@@ -158,7 +173,10 @@
         var members = self.find({kind: 'event', memberof: title === 'Global' ? {isUndefined: true} : doc.longname});
         if (members && members.length) {
     ?>
-        <h3 class="subsection-title"><i class="fa fa-bolt"></i> Events</h3>
+        <h3 class="subsection-title">
+          <?js= process.env.HEADER_ICONS ? '<i class="fa fa-bolt"></i>' : '' ?>
+          Events
+        </h3>
         <div class="panel panel-default">
             <?js= self.partial('method-list.tmpl', members) ?>
         </div>
