get node module name on multi stacked dox

--- a/static/styles/docs.css
+++ b/static/styles/docs.css
@@ -1196,3 +1196,15 @@ hr {
 footer {
   margin-top: 50px;
 }
+
+.page-header {
+  margin-bottom: 14px;
+}
+
+.from-module {
+  font-size: 14px;
+}
+
+.class-description {
+  margin-top: 30px;
+}
