--- a/tmpl/method-list.tmpl
+++ b/tmpl/method-list.tmpl
@@ -32,10 +32,13 @@
                 <?js= method.inherits ? 'inherited' : '' ?>
                 <?js= method.deprecated ? 'deprecated' : '' ?>
                 "
-                href="#<?js= method.name ?>"><?js= method.name ?>
-              </a>
+                href="#<?js= method.name ?>"><?js= method.name ?></a>
+
               <?js if (method.readonly) { ?>
                 <i title="readonly" class="fa fa-lock"></i>
+              <?js } ?>
+              <?js if (method.virtual) { ?>
+                <i title="virtual or abstract" class="fa fa-adjust"></i>
               <?js } ?>
               <?js if (returns === 'Promise') { ?>
                 <i title="Promise-based async" class="fa fa-random"></i>
