--- a/tmpl/params.tmpl
+++ b/tmpl/params.tmpl
@@ -47,10 +47,6 @@
 
                 <th>Type</th>
 
-                <?js if (params.hasAttributes) {?>
-                <th>Argument</th>
-                <?js } ?>
-
                 <?js if (params.hasDefault) {?>
                 <th>Default</th>
                 <?js } ?>
@@ -68,7 +64,11 @@
 
         <tr>
             <?js if (params.hasName) {?>
-                <td class="name"><?js= param.name ?></td>
+                <td class="name"><?js= param.name ?>
+                  <?js if (param.optional) { ?>
+                    <i title="optional parameter" class="fa fa-question-circle"></i>
+                  <?js } ?>
+                </td>
             <?js } ?>
 
             <td class="type">
@@ -76,22 +76,6 @@
                 <?js= self.partial('type.tmpl', param.type.names) ?>
             <?js } ?>
             </td>
-
-            <?js if (params.hasAttributes) {?>
-                <td class="attributes">
-                <?js if (param.optional) { ?>
-                    <span class="label">optional</span>&nbsp;
-                <?js } ?>
-
-                <?js if (param.nullable) { ?>
-                    <span class="label">nullable</span>&nbsp;
-                <?js } ?>
-
-                <?js if (param.variable) { ?>
-                    <span class="label">repeatable</span>&nbsp;
-                <?js } ?>
-                </td>
-            <?js } ?>
 
             <?js if (params.hasDefault) {?>
                 <td class="default">
