--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -19,7 +19,7 @@
     <header class="header navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/<?js= this.docdir ?>">
+          <a class="navbar-brand" href="/">
             <?js= this.pageTitle ?>
           </a>
         </div>
