--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -1,7 +1,8 @@
 <?js var data = obj; ?>
+<a id="<?js= id ?>"></a>
 <dl class="bs-docs-example bs-members">
   <dt>
-      <h3 class="name" id="<?js= id ?>">
+      <h3 class="name">
         <?js= name + (data.signature ? data.signature : '') ?>
         <?js if(data.isEnum) { ?>
           <span class="label label-info">enum</span>
