--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -26,10 +26,10 @@
       </div>
     </header>
 
-    <div class="container-fluid">
+    <div class="primary-content container-fluid">
       <div class="row-fluid">
-          <div class="col-md-3">
-              <?js= this.nav ?>
+          <div class="sidenav col-md-3">
+            <?js= this.partial('side-nav.tmpl', this) ?>
           </div>
 
           <div class="col-md-9">
