--- a/tmpl/method-list.tmpl
+++ b/tmpl/method-list.tmpl
@@ -28,11 +28,8 @@
 
         <tr>
             <td class="name">
-              <a class="
-                <?js= method.inherits ? 'inherited' : '' ?>
-                <?js= method.deprecated ? 'deprecated' : '' ?>
-                "
-                href="#<?js= method.name ?>"><?js= method.name ?></a>
+              <?js var linkClasses = method.deprecated ? 'deprecated' : ''; ?>
+              <?js= self.linkto(method.longname, method.name, linkClasses) ?>
 
               <?js if (method.readonly) { ?>
                 <i title="readonly" class="fa fa-lock"></i>
