--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -29,7 +29,7 @@
     <div class="primary-content container-fluid">
       <div class="row-fluid">
           <div class="sidenav col-md-3">
-            <?js= this.partial('side-nav.tmpl', this) ?>
+            <?js= this.partial('side-nav-grouped.tmpl', this) ?>
           </div>
 
           <div class="col-md-9">
