--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -6,6 +6,8 @@
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
+    <script src="scripts/jquery-2.1.1.min.js"> </script>
+    <script src="scripts/page.js"> </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -22,6 +24,11 @@
           <a class="navbar-brand" href="/">
             <?js= this.pageTitle ?>
           </a>
+          <div class="navbar-right">
+            <div class="external-links">
+              <i class="fa fa-github"></i>
+            </div>
+          </div>
         </div>
       </div>
     </header>
