--- a/tmpl/side-nav-grouped.tmpl
+++ b/tmpl/side-nav-grouped.tmpl
@@ -35,7 +35,7 @@ function renderThing(thing) { ?>
     var mname = entry.name;
     var things = entry.things;
   ?>
-    <li class="collapsable module-item">
+    <li data-module-name="<?js= mname ?>" class="collapsed collapsable module-item">
       <span class="collapsed-status">
         <i class="expand fa fa-plus-square-o"></i>
         <i class="collapse fa fa-minus-square-o"></i>
