--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,700,600,400' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,300,700,600,400' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link href="styles/bootstrap.min.css" rel="stylesheet">
     <link href="styles/docs.css" rel="stylesheet">
