--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -21,7 +21,7 @@
     <header class="header navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="<?js= this.indexUrl ?>">
             <?js= this.pageTitle ?>
           </a>
           <div class="navbar-right">
